[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/story/CharacterCreation.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.1, 0.08, 0.14, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.6, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="CenterPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("panel_style")

[node name="Margin" type="MarginContainer" parent="CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="CenterPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
text = "Create Your Character"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="Spacer1" type="Control" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)

[node name="NameLabel" type="Label" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
text = "Name"
theme_override_font_sizes/font_size = 18

[node name="NameInput" type="LineEdit" parent="CenterPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
max_length = 20
placeholder_text = "Enter your name..."

[node name="Spacer2" type="Control" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="GenderLabel" type="Label" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
text = "Gender"
theme_override_font_sizes/font_size = 18

[node name="GenderBox" type="HBoxContainer" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MaleButton" type="Button" parent="CenterPanel/Margin/VBox/GenderBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Male"

[node name="FemaleButton" type="Button" parent="CenterPanel/Margin/VBox/GenderBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Female"

[node name="Spacer3" type="Control" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ClassLabel" type="Label" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
text = "Choose Your Path"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="ClassGrid" type="GridContainer" parent="CenterPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="ClassDesc" type="RichTextLabel" parent="CenterPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
bbcode_enabled = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 14

[node name="Spacer4" type="Control" parent="CenterPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ConfirmButton" type="Button" parent="CenterPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
text = "Begin Adventure"
